--- a/index.htm
+++ b/index.htm
@@ -168,7 +168,7 @@
 <article class="page even" id="intro" style="padding-bottom: 100px; margin-top: -10px;">
 
     <div class="img">
-        <img style="margin:0px auto;display:block" src="img/pictures/slide1.png" alt="" title=""/>
+        <img style="margin:0px auto;display:block" src="img/pictures/name.png" alt="" title=""/>
     </div>
 
 </article>
