--- a/index.htm
+++ b/index.htm
@@ -342,6 +342,9 @@
 
         <p><a style="color: #EE5A28;" target="_blank" href="https://github.com/meashish123/CollabIDE-Client">Collaborative
             IDE</a></p>
+        <p style="font-size: 18px;">
+            <a target="_blank" href="https://github.com/meashish123/CollabIDE-Client">goto GitHub</a>
+        </p>
 
         <p style="font-size: 18px;">While working on large development projects, all software developers eventually find
             themselves in a
@@ -396,6 +399,10 @@
         <p><a style="color: #EE5A28;" target="_blank" href="https://github.com/meashish123/AI-Challenge-Judge">
             AI Challenge Judge
         </a></p>
+        <p style="font-size: 18px;">
+            <a target="_blank" href="https://github.com/meashish123/AI-Challenge-Judge">goto GitHub</a>
+        </p>
+
 
         <p style="font-size: 18px;">
             An online platform in which there is a two-player game and contestant has to write code for a bot that will
@@ -495,9 +502,12 @@
         <div class="page-title"><a href="#top"><h1>Connect With Me</h1></a></div>
         <p>Connect with me through social media and get updates and news.</p>
         <ul class="connect">
-            <li><a target="_blank" href="https://www.facebook.com/plus.ashish"><img src="img/c-facebook.png" alt="Facebook"></a></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/meashish123"><img src="img/c-linkedin.png" alt="LinkedIn"></a></li>
-            <li><a target="_blank" href="https://plus.google.com/107344516472137889951"><img src="img/c-google.png" alt="Google Plus"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/plus.ashish"><img src="img/c-facebook.png"
+                                                                                    alt="Facebook"></a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/meashish123"><img src="img/c-linkedin.png"
+                                                                                       alt="LinkedIn"></a></li>
+            <li><a target="_blank" href="https://plus.google.com/107344516472137889951"><img src="img/c-google.png"
+                                                                                             alt="Google Plus"></a></li>
         </ul>
     </div>
 </article>
@@ -513,7 +523,8 @@
 
         <br>
         <p style="font-size: 18px; margin-top: 50px"><strong>me.ashishchauhan@gmail.com</strong></p>
-        <p style="font-size: 18px;">I am located in Allahabad, but am looking for positions all over the country. If you are
+        <p style="font-size: 18px;">I am located in Allahabad, but am looking for positions all over the country. If you
+            are
             interested in working with me, shoot me an email to the email-id above and I will get back
             to you. Thanks!</p>
 
