--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,8 @@
     <!-- Le javascript -->
     <script src="https://use.fontawesome.com/eda6edefe5.js"></script>
     <!--<script src="js/jquery-1.7.2.min.js"></script>-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <script src="js/jquery.gridder.min.js"></script>
 
