Added img border

--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,15 @@
 <article class="page even" id="intro" style="padding-bottom: 100px; margin-top: -20px;">
 
     <div class="img">
-        <img style="height: 300px; margin:0 auto 35px auto; display:block" src="img/pictures/avatar.png" alt="" title=""/>
+        <img style="height: 300px; 
+					margin:0 auto 35px auto; 
+					display:block;
+					-webkit-border-radius: 99em;
+					-moz-border-radius: 99em;
+					border-radius: 99em;
+					border: 5px solid #eee;
+					box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);" 		
+			src="img/pictures/avatar.png" alt="" title=""/>
     </div>
 
     <div class="img">
