--- a/test.htm
+++ b/test.htm
@@ -9,8 +9,8 @@
 		</style>
 	</head>
 	<body>
-		<script src="js/three.js"></script>
-		<script src="js/controls/OrbitControls.js"></script>
+		<script src="js/three/three.js"></script>
+		<script src="js/three/controls/OrbitControls.js"></script>
 
 		<script>
 			try {
@@ -79,7 +79,7 @@
 				scene.add(mesh);
 
 				
-				camera.position.z = 300;
+				camera.position.z = 400;
 
 				function render() {
 					requestAnimationFrame(render);
